fix(route4/chat.js, route4/style.css): update chat message display and adjust z-index for improved layout

--- a/routes/route4/style.css
+++ b/routes/route4/style.css
@@ -11,7 +11,6 @@
     background-color: rgba(255, 255, 255, 0.075);
     backdrop-filter: blur(3px);
     border-radius: 10px;
-    z-index: 1;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     border: 1px solid rgba(255, 255, 255, 0.13);
     margin-top: 15vh;
@@ -21,6 +20,7 @@
     flex-direction: column;
     justify-content:center;
     align-items: end;
+    z-index: 1;
 }
 
 @keyframes fadeIn {
@@ -39,6 +39,7 @@
     height: 8vh;
     justify-content: center;
     margin-bottom: 1vh;
+    pointer-events: fill;
 }
 
 #inputBlock{
@@ -46,7 +47,6 @@
     display: flex;
     width: 70vw;
     height: 70vh;
-    z-index: 2;
     position: absolute;
     margin-top: 15vh;
     margin-left: 31vh;
@@ -54,6 +54,8 @@
     flex-direction: column;
     justify-content: flex-end;
     animation: fadeIn 1s ease;
+    pointer-events: none;
+    z-index: 2;
 }
 
 #chatInput{
@@ -90,7 +92,9 @@
     padding: 2rem;
     background-color: transparent;
     margin-bottom: 8vh;
-    overflow: auto;
+    overflow-y: auto;
+    z-index: 3;
+    font-size: 0.8rem;
 }
 
 .bubble{
@@ -100,21 +104,21 @@
     margin: 1rem;
     font-family: "SquareFont";
     color: white;
-    font-size: 1rem;
     max-width: 50%;
     word-wrap: break-word;
 }
 
 .bubbleIa{
-    background-color: rgb(255, 0, 119);
+    background-color: rgb(255, 255, 255);
+    color: black;
     border-radius: 10px;
     padding: 1rem;
     margin: 1rem;
     font-family: "SquareFont";
     color: white;
-    font-size: 1rem;
     max-width: 50%;
     word-wrap: break-word;
+    margin-right: 95%;
 }
 
 #route4{
